--- a/_config.yml
+++ b/_config.yml
@@ -26,11 +26,14 @@ baseurl: "/jekyllsite" # the subpath of your site, e.g. /blog
 url: "https://jdarrach.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: ""
 github_username:  jdarrach
+paginate: 9
+paginate_path: "/blog/page:num/"
 
 # Build settings
 theme: minima
 plugins:
   - jekyll-feed
+  - jekyll-paginate
 sass:
   sass_dir: _sass
 include: ['_pages']
